同步于: 10月4日19时3分

--- a/indexes/热点新闻.md
+++ b/indexes/热点新闻.md
@@ -46,8 +46,8 @@
 #### [ 北京有点慌！石家庄发生4.3级地震](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/659013.md)
 #### [ 王小洪查孙力军政治团伙 中共副总理韩正被牵出(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/999389.md)
 #### [ 北京要mRNA核心技术 莫德纳说“不”引关注(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1018220.md)
+#### [ 专家：中共“共同富裕”变成“共同贫穷”](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13838300.md)
 #### [ 【思想领袖】懦弱成流行病？明知真相不敢说](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13820207.md)
 #### [ 章天亮: 习率数百高官天安门献花 释三大信号 二十大名单外泄 七常委换五人？](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/658812.md)
 #### [ 青岛千年“石老人”疑被雷劈断 民讽“十一祥瑞”](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103542792.md)
 #### [ 大陆餐馆老板对警察怒吼“你们都魔症了中邪了”(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1018087.md)
-#### [ 乌克兰宣布收复乌东要塞 北约和美国回应](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13837413.md)
