--- a/indexes/热点新闻.md
+++ b/indexes/热点新闻.md
@@ -17,8 +17,8 @@
 #### [ 习权力晴雨表 解码二十大新常委五种可能](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13837527.md)
 #### [ 钓鱼台下处处是敌？习近平十一新文章聚焦斗争(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1017965.md)
 #### [ 刘锐绍分析李克强交棒下任 功成身退？](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/658938.md)
-#### [ 二十大人事仍是谜 专家析习连任和中共烂摊子](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13838146.md)
 #### [ 二十大中纪委书记换狠角？纪检高层人事密集调整(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1018264.md)
+#### [ 二十大人事仍是谜 专家析习连任和中共烂摊子](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13838146.md)
 #### [ 两会登场 如何为习近平第三个任期铺路引关注(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/999599.md)
 #### [ 习权力晴雨表 解码二十大新常委五种可能](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13837527.md)
 #### [ 二十大前 中共加码打压网络言论生存空间](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13837805.md)
@@ -49,5 +49,5 @@
 #### [ 中国网红经济学家六批苹果 六遭网民呛声](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13837125.md)
 #### [ 章天亮: 习率数百高官天安门献花 释三大信号 二十大名单外泄 七常委换五人？](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/658812.md)
 #### [ 地摊经济重启？ 李克强对习态度异常引猜测](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103541850.md)
+#### [ “Google翻译”停止在中国境内服务](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13837809.md)
 #### [ 【思想领袖】懦弱成流行病？明知真相不敢说](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13820207.md)
-#### [ 中国内需疲弱 “八方云集”拟退出大陆市场](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13837811.md)
