同步于: 10月5日3时51分

--- a/indexes/热点新闻.md
+++ b/indexes/热点新闻.md
@@ -29,9 +29,9 @@
 #### [ 二十大前 中共纪委和军方人事先行调整](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13838485.md)
 #### [ 专家：二十大第一个观察重点不是习三连任](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/659112.md)
 #### [ 习近平吃瘪 七个常委三条心(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p4/1018227.md)
+#### [ 中共在30多国家设54个警站 加国至少3个](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13838184.md)
 #### [ 二十大人事议题敏感 政治局会议疑秘而不宣](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103543380.md)
 #### [ 二十大习派系能否接管“刀把子”引关注(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1018041.md)
-#### [ 中共在30多国家设54个警站 加国至少3个](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13838184.md)
 #### [ 【名家专栏】中共警方实施朝鲜式“三代惩罚”](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13838045.md)
 #### [ 专家：人口危机将笼罩习近平第三任期](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13837863.md)
 #### [ 中共军委改组“台海帮”上位？专家分析](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13837959.md)
@@ -50,4 +50,4 @@
 #### [ 国殇日谴责中共暴行 多国华人吁解体中共](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13838156.md)
 #### [ 兰州逃离小区居民对警察怒吼“抓啊？看你们能抓几个”(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1018172.md)
 #### [ 渡轮助中共登陆攻台？ 美前军官：不会成功](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13838428.md)
-#### [ 中国内需疲弱 “八方云集”拟退出大陆市场](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13837811.md)
+#### [ 习近平示范立竿见影 北京马拉松透惊人信号？](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/659400.md)
